syntax = "proto3";

package profiler_output;

option go_package = "./proto";

service Profiler {
  rpc SendProfilerOutput (ProfilerOutputRequest) returns (Response);
}

message FuncParams {
  repeated string args = 1;
  repeated string types = 2;
  repeated string kwargs = 3;
}

message ProfilerOutput {
  string function_name = 1;
  float start_time = 2;
  float end_time = 3;
  float memory_usage = 4;
  float cpu_usage = 5;
  repeated FuncParams func_params = 6;
}

message ProfilerOutputRequest {
  string token = 1;
  ProfilerOutput profiler_output = 3;
}

message Response {
  bool ok = 1;
  string message = 2;
}
